Html file changes, short name update

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="hero-bg">
         <div class="wrapper">
             <div class="info">
-                <h1>Generator tekstów dra Bartosiaka</h1>
-                <p>Kliknij w pana doktora i poznaj geostrategiczną myśl na dziś!</p>
+                <h1>Generator tekstów mgra Bartosiaka</h1>
+                <p>Kliknij w pana magistra i poznaj geostrategiczną myśl na dziś!</p>
             </div>
             <div class="doctor-img">
                 <img class='doctor-foto' src="./img/DrJacekBartosiakFinal.png" alt="Dr Jacek Bartosiak face">
